# POC_using_plugins

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/gui/: main.qml  qml.qrc
app/src/: IPlugin.h  PluginManager.cpp  PluginManager.h  main.cpp
plugins/: CMakeLists.txt
plugins/anotherplugin/: CMakeLists.txt
plugins/anotherplugin/src/: AnotherPlugin.cpp  AnotherPlugin.h
plugins/sampleplugin/: CMakeLists.txt
plugins/sampleplugin/src/: SamplePlugin.cpp  SamplePlugin.h
